Make sure home safety doesn’t overflow

--- a/src/templates/Home.css
+++ b/src/templates/Home.css
@@ -114,7 +114,9 @@
 }
 
 .Home-safety {
+  overflow: hidden;
   padding: 80px 0;
+  width: 100%;
 }
 
 .Home-safety-image-text {
